--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "democracy-voucher",
   "version": "0.1.0",
+  "private": true,
   "description": "Looking at data from Seattle's \"democracy voucher\" program",
-  "main": "index.js",
   "scripts": {
     "commitmsg": "commit-msg-must-use-emoji",
-    "test": "eslint index.js"
+    "test": "eslint index.js",
+    "start": "node load-data.js && (rollup -cw & serve site)",
+    "deploy": "node load-data.js && rollup -c && uglifyjs -b beautify=false site/bundle.js -c negate_iife=false -m -o site/bundle.js && surge site"
   },
   "repository": {
     "type": "git",
@@ -30,10 +32,20 @@
   },
   "homepage": "https://github.com/alecglassford/democracy-voucher#readme",
   "devDependencies": {
+    "axios": "^0.17.0",
     "commit-msg-must-use-emoji": "^1.1.3",
     "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "husky": "^0.14.3"
+    "fs-extra": "^4.0.2",
+    "husky": "^0.14.3",
+    "rollup": "^0.50.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "serve": "^6.4.1",
+    "uglify-es": "^3.1.6",
+    "xlsx": "^0.11.7"
+  },
+  "dependencies": {
+    "d3": "^4.11.0"
   }
 }
